# FastAPI-Course-FreeCodeCamp

./: .gitignore  populate_dummy_data.py  populate_dummy_posts.py  populate_dummy_users.py  pyproject.toml  test.py
app/: alembic.ini  database.py  dependencies.py  logging_config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 1e15ecd4f6af_initial_version.py  4da550a60083_add_bookmarks_table_and_modified_id_to_.py  6ae01ef4f8bb_removed_age_and_gender_column_and_.py  6d912201a6c0_added_likes_and_comments_table.py  a12adeafccd9_add_cascade_delete_in_post_tags_and_.py  a819281e034c_initial_schema.py  ad96e2a56d85_changed_all_columns_to_bigint_in_post_.py
app/middleware/: logging_middleware.py
app/models/: __init__.py  address.py  auth_details.py  bookmarks.py  comments.py  company.py  company_address.py  enums.py  likes.py  payment_details.py  post_metrics.py  post_tags.py  posts.py  tags.py  users.py
app/routes/: auth.py  posts.py  users.py
app/schemas/: __init__.py  post.py  user.py
app/services/: auth_service.py  post_service.py  tag_service.py  user_service.py
frontend/: middleware.js  next.config.mjs  package-lock.json  package.json  sentry.edge.config.js  sentry.server.config.js
frontend/src/: instrumentation-client.js  proxy.js
frontend/src/app/: global-error.jsx  globals.css  layout.js  page.js
frontend/src/app/home/: page.js
frontend/src/app/hooks/: useBookmark.js  useLike.js  (+3 more)
frontend/src/components/: AlertMessage.js  AuthorCard.js  Editor.js  Header.js  PostCard.js  SideBar.js  TagInput.js
frontend/src/lib/: api.js  utils.js
(+4 files in other folders)
