[project]
name = "fastapi-course-freecodecamp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "black>=25.12.0",
    "fastapi[all]>=0.128.0",
    "psycopg>=3.3.2",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pyrefly>=0.47.0",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.16.0",
    "redoc>=0.2.3",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
]
