[project]
name = "fastapi-course-freecodecamp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "black>=25.12.0",
    "bs4>=0.0.2",
    "email-validator>=2.3.0",
    "fastapi[all]>=0.128.0",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.2",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.10.1",
    "pyrefly>=0.47.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-socketio>=5.16.0",
    "redoc>=0.2.3",
    "sentry-sdk>=2.50.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uuid-utils>=0.14.0",
    "uvicorn>=0.40.0",
]
